--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -244,3 +244,10 @@ CD2553
   display: block;
   font-size: 11pt;
 }
+
+.drop-zone {
+  border: 2px dashed #ccc;
+  text-align: center;
+  padding: 20px;
+  cursor: pointer;
+}
